# mosip-hack

./: .gitignore  README.md  docker-compose.yml  main.py  run.sh
backend/: .dockerignore  Dockerfile  config.py  main.py  package.json  requirements.txt
backend/ocr/: extractor.py  field_parser.py  preprocessing.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20251211053159_init/: migration.sql
backend/src/: app.ts
backend/src/controllers/: auth.ts  ocr.ts
backend/src/middleware/: auth.ts
backend/src/models/: auth.ts  ocr.ts
backend/src/routes/: auth.ts  ocr.ts
backend/src/utils/: prisma.ts
backend/test/: api.test.ts
backend/utils/: pdf_processing.py  qr_generator.py
frontend/: Dockerfile  index.html  package.json  script.js  vite.config.ts
frontend/src/: App.vue
frontend/src/router/: index.ts
frontend/src/views/: ExtractView.vue  GenerateVCView.vue  HomeView.vue  LoginView.vue  RegisterView.vue  VerifyView.vue
frontend_legacy/: script.js  styles.css
ocr/: .dockerignore  Dockerfile  main.py  pyproject.toml  standalone_ocr_test.py
ocr/utils/: quality_score.py  vc_generator.py
ocr/verification/: comparator.py  confidence.py
